<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ira_laser_tools</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="1540152688@qq.com">netlab</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 如果依赖其他包 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>laser_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>Eigen3</depend>
  <depend>PCL</depend>
  <depend>pcl_msgs</depend>


  <!-- launch依赖 -->
  <exec_depend>ros2launch</exec_depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
